Fix checkbox in .task-list-item collapsed

--- a/GitHub.iatemplate/Contents/Resources/github-markdown.css
+++ b/GitHub.iatemplate/Contents/Resources/github-markdown.css
@@ -700,8 +700,9 @@
 }
 
 .markdown-body .task-list-item input {
-  margin: 0 0.2em 0.25em -1.6em;
+  margin: 0.35em 0.2em 0.25em -1.6em;
   vertical-align: middle;
+  float: left;
 }
 
 .markdown-body .header-search-input::-ms-clear {
